[project]
name = "purehtml-purescraps"
version = "0.1.1"
authors = [
  { name="Onur C. Güven", email="onurcguven09@gmail.com" },
]
description = "HTML data extraction library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "PyYAML~=6.0.2",
  "jsonschema~=4.23.0",
  "beautifulsoup4~=4.12.3",
  "html5lib~=1.1"
]

[project.urls]
Homepage = "https://github.com/purescraps/purehtml"
Issues = "https://github.com/purescraps/purehtml/issues"
